# MCPFinance

./: .env  Dockerfile  Makefile  OPENFINANCE_MCP.md  README.md  alembic.ini  docker-compose.yml  pre-commit-config.yaml  pyproject.toml  run_mcp_server.py
alembic/: env.py  script.py.mako
alembic/versions/: 20240901_000001_create_users.py
examples/: README.md  openfinance_usage.py
protos/: openfinance.proto
src/app/: main.py
src/app/api/: schemas.py
src/app/api/routes/: health.py  openfinance.py  users.py
src/app/core/: config.py  deps.py  errors.py  http_client.py  logging.py  observability.py  security.py
src/app/db/: session.py
src/app/domain/: openfinance.py  user.py
src/app/grpc_server/: __init__.py  openfinance_grpc.py
src/app/mcp/: __init__.py  openfinance_server.py
src/app/repositories/: ports.py  user_repo_memory.py  user_repo_sql.py
src/app/services/: correlation_engine.py  dictionary_loader.py  mock_generator.py  openfinance_loader.py  swagger_parser.py  user_service.py
tests/: conftest.py  test_contract_openapi.py  test_health.py  test_openfinance_api.py  test_openfinance_system.py  test_users_api.py
